Add an icon under card

--- a/dev/src/index.haml
+++ b/dev/src/index.haml
@@ -16,3 +16,4 @@
             %p.location= 'Researcher at University of Oviedo'
             %p.contact
               %a{ :href => 'mailto:danielmeanallorian@gmail.com' }= 'danielmeanallorian@gmail.com'
+        %p.joke= '¯\_(ツ)_/¯'
