--- a/dev/src/scss/main.scss
+++ b/dev/src/scss/main.scss
@@ -56,3 +56,11 @@ section#welcome {
     }
   }
 }
+
+p.joke {
+  color: white;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 2em;
+  text-align: center;
+}
