--- a/dev/src/scss/main.scss
+++ b/dev/src/scss/main.scss
@@ -1,6 +1,12 @@
 $font: 'Open Sans', sans-serif;
-$primary-color: #e74c3c;
-$secondy-color: #c0392b;
+$primary-color: #F45C43;
+$secondary-color: #EB3349;
+@mixin centerer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 * {
   margin: 0;
   padding: 0;
@@ -13,54 +19,64 @@ body {
 body {
   font-family: $font;
   background: $primary-color;
+  background: linear-gradient(to bottom, $primary-color , $secondary-color);
 }
-section#welcome {
-  display: table;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  .center-wrapper {
-    display: table-cell;
-    vertical-align: middle;
-    .card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 5px 20px #333;
+header {
+  @include centerer;
+  text-align: center;
+  .content {
+    background: white;
+    border-radius: 10px 10px 0 0;
+    padding: 20px;
+    .photo {
+      border-radius: 50%;
+      display: block;
       margin: auto;
-      width: 450px;
-      height: 160px;
-      .photo {
-        border-radius: 50%;
-        float: left;
-        padding: 20px;
-        width: 120px;
-      }
-      .description {
-        padding: 20px;
-        .name {
+      margin-bottom: 20px;
+      width: 120px;
+    }
+    .name {
+      font-weight: bold;
+      font-size: 1.5em;
+    }
+    .contact {
+      a {
+        color: $primary-color;
+        text-decoration: none;
+        &:hover {
+          color: $secondary-color;
           font-weight: bold;
-          font-size: 1.5em;
-        }
-        .contact {
-          padding-top: 10px;
-          a {
-            color: $primary-color;
-            text-decoration: none;
-          }
-          a:hover {
-            color: $secondy-color;
-            text-decoration: underline;
-          }
         }
       }
     }
   }
+  button.next {
+    background-color: white;
+    border: 0;
+    border-radius: 0 0 10px 10px;
+    color: #333;
+    cursor: pointer;
+    font-size: 1em;
+    margin-top: 1px;
+    padding: 10px;
+    text-transform: uppercase;
+    transition: .1s ease-in-out;
+    width: 100%;
+    &:hover {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+  }
 }
-
-p.joke {
+main {
+}
+footer {
   color: white;
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-top: 2em;
   text-align: center;
+  &.welcome {
+    left: 50%;
+    position: absolute;
+    top: 100%;
+    transform: translate(-50%, -150%);
+  }
 }
