--- a/dev/src/index.haml
+++ b/dev/src/index.haml
@@ -11,7 +11,7 @@
     %header{ :itemscope => '', :itemtype => 'http://schema.org/Person' }
       .content
         %img.photo{ :itemprop => 'image', :src => 'https://lh3.googleusercontent.com/7c4na51r1Km9UNjs6fvoti7oYZhf6JF5n4bszDNTduCfnH0Iij65TLwf64i0BCZShQuJ=w438-h436-p-no' }
-        %p.name{ :itemprop => 'name' }= 'Daniel Meana LLorián'
+        %p.name{ :itemprop => 'name' }= 'Daniel Meana Llorián'
         %p.location{ :itemprop => 'address' }= 'Asturias, Spain'
         %p.location
           %span{ :itemprop => 'jobTitle' }='Researcher'
