--- a/dev/src/scss/main.scss
+++ b/dev/src/scss/main.scss
@@ -1,4 +1,4 @@
-$font: 'Open Sans', sans-serif;
+$font: 'Lato', sans-serif;
 $primary-color: #F45C43;
 $secondary-color: #EB3349;
 @mixin centerer {
