--- a/dev/src/index.haml
+++ b/dev/src/index.haml
@@ -4,7 +4,7 @@
     %meta{ :charset => 'utf-8' }
     %meta{ :name => 'viewport', :content => 'initial-scale=1, maximum-scale=1' }
     %link{ :rel => 'stylesheet', :href => 'https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' }
-    %link{ :href => 'https://fonts.googleapis.com/css?family=Open+Sans', :rel => 'stylesheet' }
+    %link{ :href => 'https://fonts.googleapis.com/css?family=Lato', :rel => 'stylesheet' }
     %link{ :href => 'css/main.css', :rel => 'stylesheet' }
     %title= 'Daniel Meana Llorián - Index'
   %body
